# strava-analysis

./: .gitignore  CITATION.cff  LICENSE  README.md  calkit.yaml  dvc.yaml  params.yaml  pyproject.toml  references.bib  requirements-lock.txt  requirements.txt
.calkit/: status.csv
.calkit/calculations/: latest_timestamp.yaml
.calkit/runs/: 2025-07-15T02-46-18-6a2a13c828684a9da28fc03df153ce20.json  2025-07-16T02-44-11-6f41519c791442cd8463d55657859706.json  2025-07-17T02-44-22-80b19ec609de4fffb66603aa18d8fbb1.json  2025-07-18T02-46-05-271566cfb5c84d279e681c58d75ef72c.json  2025-07-19T02-40-36-d7cc38b56dd44939b2a28612799c8039.json  2025-07-20T02-51-19-aad3fa2d65344a858befa2f3a3c9e0b1.json  2025-07-21T02-50-50-a83b56984d5f4f648dbac0de68d3021c.json  2025-07-22T02-45-42-3dc5d18981cf43859b56858b058a89f5.json  2025-07-23T02-46-15-44de8ab3765b486abd54cc4a2c7c2e34.json  2025-07-24T02-45-39-ff2a9ea1ab8c4ea884d421200ef00f96.json  2025-07-25T02-45-21-df5fc9fe470e44289419dd65045e589a.json  2025-07-26T02-42-12-3632c504c9a3496f9426d813e52ff591.json  2025-07-27T02-52-12-a500c3dc1bb04bd5925ec2d9dbe86fa7.json  2025-07-28T02-50-59-f965415f750e489f84c9876f1e6c1191.json  2025-07-29T02-52-56-bdac9435f8034e93900b874e4d9c2d57.json  2025-07-30T02-48-35-87fe0893c39f4185a8b1b129fdf406bc.json  (+15 more)
.devcontainer/: devcontainer.json
.dvc/: config
data/: .gitignore
figures/: dists-latest-week.json  weekly-dists-24-weeks.json  weekly-energy.json
notebooks/: main.ipynb
pypkg/: plot.py  strava.py
scripts/: auth.py  get-data.py  plot-weekly-dists.py  plot-weekly-energy.py  plot-weekly-thresh.py
(+1227 files in other folders)
