[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Pete Bachant", email = "petebachant@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Python package for the petebachant/strava-analysis Calkit project."
version = "0.0.1"
name = "pypkg"
readme = "README.md"
requires-python = ">=3.5"

[tool.hatch.build.targets.wheel]
packages = ["pypkg"]
