[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "Pete Bachant", email = "petebachant@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Python package for the petebachant/strava-analysis Calkit project."
dependencies = [
  "stravalib",
  "pandas",
  "polars[plot]",
  "plotly",
  "ipykernel",
  "xgboost",
  "ipython",
  "requests",
  "python-dotenv",
  "ruamel-yaml",
  "duckdb",
  "tqdm",
  "pyarrow",
  "matplotlib",
  "nbformat>=4.2.0",
  "calkit-python",
]
version = "0.0.1"
name = "pypkg"
readme = "README.md"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["pypkg"]
